2009-04-24  Simon Hausmann  <simon.hausmann@nokia.com>

        Rubber-stamped by Ariya Hidayat.

        Fix qdoc warning about link to QAction::isEnabled.

        * Api/qwebpage.cpp:

2009-04-24  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Ariya Hidayat.

        Added support for generating API docs in the Qt build using "make docs"

        Added code snippets and overview from the Qt sources references in the API docs.

        * Api/qwebpage.cpp: Adjust paths to snippets.
        * Api/qwebview.cpp: Ditto.
        * docs/docs.pri: Added.
        * docs/qtwebkit.qdoc: Added.
        * docs/qtwebkit.qdocconf: Added.
        * docs/webkitsnippets/qtwebkit_build_snippet.qdoc: Added.
        * docs/webkitsnippets/qtwebkit_qwebview_snippet.cpp: Added.
        * docs/webkitsnippets/simple/main.cpp: Added.
        * docs/webkitsnippets/simple/simple.pro: Added.
        * docs/webkitsnippets/webpage/main.cpp: Added.
        * docs/webkitsnippets/webpage/webpage.pro: Added.

2009-04-23  Antonio Gomes   <antonio.gomes@openbossa.org>

        Reviewed by Ariya Hidayat.

        [Qt] Added QWebElement::computedStyleProperty method.

        * Api/qwebelement.cpp:
        (QWebElement::computedStyleProperty):
        * Api/qwebelement.h:
        * tests/qwebelement/tst_qwebelement.cpp:
        (tst_QWebElement::computedStyle):

2009-04-23  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Rubber-stamped by Ariya Hidayat.

        [Qt] Rename QWebElement arguments from html to markup

        * Api/qwebelement.cpp:
        (QWebElement::append):
        (QWebElement::prepend):
        (QWebElement::insertBefore):
        (QWebElement::insertAfter):
        * Api/qwebelement.h:

2009-04-21  Antonio Gomes   <antonio.gomes@openbossa.org>

        Reviewed by Ariya Hidayat.

        QWebElementSelection renamed to QWebElementCollection.

        * Api/qwebelement.cpp:
        (QWebElement::findAll):