@@ -954,7 +954,7 @@ QRect QWebFrame::geometry() const
     \property QWebFrame::contentsSize
     \brief the size of the contents in this frame
 
-    \sa contentsSizeChanged
+    \sa contentsSizeChanged()
 */
 QSize QWebFrame::contentsSize() const
 {
@@ -1213,7 +1213,8 @@ QWebFrame* QWebFramePrivate::kit(WebCore::Frame* coreFrame)
   \fn void QWebFrame::contentsSizeChanged(const QSize &size)
   \since 4.6
 
-  This signal is emitted when the frame's contents size changes.
+  This signal is emitted when the frame's contents size changes
+  to \a size.
 
   \sa contentsSize()
 */
@@ -1412,7 +1413,7 @@ QUrl QWebHitTestResult::linkTitle() const
   \since 4.6
   Returns the name of the target frame that will load the link if it is activated.
 
-  \sa linkTargetFrame
+  \sa linkTargetFrame()
 */
 QString QWebHitTestResult::linkTarget() const
 {
@@ -1424,7 +1425,7 @@ QString QWebHitTestResult::linkTarget() const
 /*!
     Returns the frame that will load the link if it is activated.
 
-    \sa linkTarget
+    \sa linkTarget()
 */
 QWebFrame *QWebHitTestResult::linkTargetFrame() const
 {
