@@ -153,6 +153,7 @@ void QWebNetworkRequestPrivate::setURL(const QUrl &u)
 
 /*!
   \class QWebNetworkRequest
+  \internal
 
   The QWebNetworkRequest class represents a request for data from the network with all the
   necessary information needed for retrieval. This includes the url, extra HTTP header fields
@@ -205,6 +206,7 @@ QWebNetworkRequest::~QWebNetworkRequest()
 }
 
 /*!
+  \internal
   The requested URL
 */
 QUrl QWebNetworkRequest::url() const
@@ -213,6 +215,7 @@ QUrl QWebNetworkRequest::url() const
 }
 
 /*!
+   \internal
    Sets the URL to request.
 
    Note that setting the URL also sets the "Host" field in the HTTP header.
@@ -223,6 +226,7 @@ void QWebNetworkRequest::setUrl(const QUrl &url)
 }
 
 /*!
+   \internal
    The http request header information.
 */
 QHttpRequestHeader QWebNetworkRequest::httpHeader() const
@@ -246,6 +250,7 @@ void QWebNetworkRequest::setHttpHeaderField(const QString &key, const QString &v
 }
 
 /*!
+    \internal
     Post data sent with HTTP POST requests.
 */
 QByteArray QWebNetworkRequest::postData() const
@@ -260,6 +265,7 @@ void QWebNetworkRequest::setPostData(const QByteArray &data)
 
 /*!
   \class QWebNetworkJob
+  \internal
 
   The QWebNetworkJob class represents a network job, that needs to be
   processed by the QWebNetworkInterface.
@@ -292,6 +298,7 @@ QWebNetworkJob::~QWebNetworkJob()
 }
 
 /*!
+  \internal
   The requested URL
 */
 QUrl QWebNetworkJob::url() const
@@ -300,6 +307,7 @@ QUrl QWebNetworkJob::url() const
 }
 
 /*!
+  \internal
   Post data associated with the job
 */
 QByteArray QWebNetworkJob::postData() const
@@ -308,6 +316,7 @@ QByteArray QWebNetworkJob::postData() const
 }
 
 /*!
+  \internal
   The HTTP request header that should be used to download the job.
 */
 QHttpRequestHeader QWebNetworkJob::httpHeader() const
@@ -316,6 +325,7 @@ QHttpRequestHeader QWebNetworkJob::httpHeader() const
 }
 
 /*!
+  \internal
   The complete network request that should be used to download the job.
 */
 QWebNetworkRequest QWebNetworkJob::request() const
@@ -324,6 +334,7 @@ QWebNetworkRequest QWebNetworkJob::request() const
 }
 
 /*!
+  \internal
   The HTTP response header received from the network.
 */
 QHttpResponseHeader QWebNetworkJob::response() const
@@ -332,6 +343,7 @@ QHttpResponseHeader QWebNetworkJob::response() const
 }
 
 /*!
+  \internal
   The last error of the Job.
 */
 QString QWebNetworkJob::errorString() const
@@ -340,6 +352,7 @@ QString QWebNetworkJob::errorString() const
 }
 
 /*!
+  \internal
   Sets the HTTP reponse header. The response header has to be called before
   emitting QWebNetworkInterface::started.
 */
@@ -354,6 +367,7 @@ void QWebNetworkJob::setErrorString(const QString& errorString)
 }
 
 /*!
+  \internal
   returns true if the job has been cancelled by the WebKit framework
 */
 bool QWebNetworkJob::cancelled() const
@@ -362,6 +376,7 @@ bool QWebNetworkJob::cancelled() const
 }
 
 /*!
+  \internal
   reference the job.
 */
 void QWebNetworkJob::ref()
@@ -370,6 +385,7 @@ void QWebNetworkJob::ref()
 }
 
 /*!
+  \internal
   derefence the job.
 
   If the reference count drops to 0 this method also deletes the job.
@@ -386,6 +402,7 @@ bool QWebNetworkJob::deref()
 }
 
 /*!
+   \internal
    Returns the network interface that is associated with this job.
 */
 QWebNetworkInterface *QWebNetworkJob::networkInterface() const
@@ -394,6 +411,7 @@ QWebNetworkInterface *QWebNetworkJob::networkInterface() const
 }
 
 /*!
+   \internal
    Returns the network interface that is associated with this job.
 */
 QWebFrame *QWebNetworkJob::frame() const
@@ -479,6 +497,9 @@ void QWebNetworkManager::cancel(ResourceHandle *handle)
     handle->getInternal()->m_job = 0;
 }
 
+/*!
+  \internal
+*/
 void QWebNetworkManager::started(QWebNetworkJob *job)
 {
     Q_ASSERT(job->d);
@@ -860,6 +881,7 @@ static void gCleanupInterface()
 }
 
 /*!
+  \internal
   Sets a new default interface that will be used by all of WebKit
   for downloading data from the internet.
 */
@@ -877,6 +899,7 @@ void QWebNetworkInterface::setDefaultInterface(QWebNetworkInterface *defaultInte
 }
 
 /*!
+  \internal
   Returns the default interface that will be used by WebKit. If no
   default interface has been set, QtWebkit will create an instance of
   QWebNetworkInterface to do the work.
@@ -891,6 +914,7 @@ QWebNetworkInterface *QWebNetworkInterface::defaultInterface()
 
 
 /*!
+  \internal
   Constructs a QWebNetworkInterface object.
 */
 QWebNetworkInterface::QWebNetworkInterface(QObject *parent)
@@ -904,6 +928,7 @@ QWebNetworkInterface::QWebNetworkInterface(QObject *parent)
 }
 
 /*!
+  \internal
   Destructs the QWebNetworkInterface object.
 */
 QWebNetworkInterface::~QWebNetworkInterface()
@@ -912,6 +937,7 @@ QWebNetworkInterface::~QWebNetworkInterface()
 }
 
 /*!
+  \internal
   This virtual method gets called whenever QtWebkit needs to add a
   new job to download.
 
@@ -981,6 +1007,7 @@ void QWebNetworkInterface::addJob(QWebNetworkJob *job)
 }
 
 /*!
+  \internal
   This virtual method gets called whenever QtWebkit needs to cancel a
   new job.
 
@@ -996,23 +1023,53 @@ void QWebNetworkInterface::cancelJob(QWebNetworkJob *job)
         QWebNetworkManager::self()->cancelHttpJob(job);
 }
 
+/*!
+  \internal
+*/
 void QWebNetworkInterface::started(QWebNetworkJob* job)
 {
     Q_ASSERT(s_manager);
     s_manager->queueStart(job);
 }
 
+/*!
+  \internal
+*/
 void QWebNetworkInterface::data(QWebNetworkJob* job, const QByteArray& data)
 {
     Q_ASSERT(s_manager);
     s_manager->queueData(job, data);
 }
 
+/*!
+  \internal
+*/
 void QWebNetworkInterface::finished(QWebNetworkJob* job, int errorCode)
 {
     Q_ASSERT(s_manager);
     s_manager->queueFinished(job, errorCode);
 }
+
+/*!
+  \fn void QWebNetworkInterface::sslErrors(QWebFrame *frame, const QUrl& url, const QList<QSslError>& errors, bool *continueAnyway);
+  \internal
+
+   Signal is emitted when an SSL error occurs.
+*/
+
+/*!
+  \fn void QWebNetworkInterface::authenticate(QWebFrame *frame, const QUrl& url, const QString& hostname, quint16 port, QAuthenticator *auth);
+  \internal
+
+  Signal is emitted when network authentication is required.
+*/
+
+/*!
+  \fn void QWebNetworkInterface::authenticateProxy(QWebFrame *frame, const QUrl& url, const QNetworkProxy& proxy, QAuthenticator *auth);
+  \internal
+
+  Signal is emitted when proxy authentication is required.
+*/
 
 /////////////////////////////////////////////////////////////////////////////
 WebCoreHttp::WebCoreHttp(QObject* parent, const HostInfo &hi)
